# AdventOfCode2024

./: CMakeLists.txt  README.md  building.md  main.cpp
problems/: day1.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  problems.h
